// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`describe when the TicketList Component is given showAddTicketDialog as false TicketList should show the addTicketDialog open as false 1`] = `
<div>
  <Connect(BacklogListComponent) />
  <Connect(WithStyles(AddTicketDialog))
    onRequestClose={[Function]}
    onSubmit={[Function]}
    open={false}
  />
  <Connect(CloseSprintDialog)
    onRequestClose={[Function]}
    onSubmit={[Function]}
    open={false}
  />
</div>
`;

exports[`describe when the TicketList Component is given showAddTicketDialog as true TicketList should show the addTicketDialog open as true 1`] = `
<div>
  <Connect(BacklogListComponent) />
  <Connect(WithStyles(AddTicketDialog))
    onRequestClose={[Function]}
    onSubmit={[Function]}
    open={true}
  />
  <Connect(CloseSprintDialog)
    onRequestClose={[Function]}
    onSubmit={[Function]}
    open={false}
  />
</div>
`;
